Correction bug .liked -> z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,6 +53,9 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   cursor: pointer;
 }
+.liked i {
+  z-index: 1000;
+}
 .liked i:nth-of-type(1) {
   position: relative;
   z-index: 2;
